# fastapi-tutorial

./: Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: constants.py  endpoint.py  generate.py  main.py  request.py  router.py  transcribe.py  validate.py
app/utils/: prompts.py  vectordb.py  whisper.py
